--- a/news/css/news_style.css
+++ b/news/css/news_style.css
@@ -37,6 +37,9 @@ section{width: 100%;}
 
 #news button{margin:60px auto 0; display:block; width: 30%; height: 40px; line-height:40px; border: none; background: #e60613; color: white; border-radius: 50px; font-size: 1rem; cursor: pointer;}
 
+#no_list{display: none;}
+#no_list.on{display: block;}
+
 /* go_top banner*/
 #go_top{display:none; width: 100%; height: 50px; background:url("../../img/logo_nintendo_red.gif") no-repeat center #e60613; position: relative;}
 #go_top a{position:absolute; top:50%; right:20px; transform:translateY(-50%); display: flex; justify-content:flex-end; align-items:center; width: 25px; height: 25px; color:white; padding:0 4px; border:2px solid white; border-radius:17px; overflow: hidden; box-sizing: border-box; transition: width .2s;}
