--- a/nintendo_switch/css/oled_style.css
+++ b/nintendo_switch/css/oled_style.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100; 300; 400; 500; 700&display=swap');html,body { width: 100%; height: 100%; font-family: 'Noto Sans KR', Arial, sans-serif; color:#222; } 
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100; 300; 400; 500; 700&display=swap');
+html,body { width: 100%; height: 100%; font-family: 'Noto Sans KR', Arial, sans-serif; color:#222; } 
 section,main { width: 100%; overflow: hidden;} 
 .wrap { width: 100%; padding: 0 20px; box-sizing: border-box; } 
 
@@ -38,7 +39,8 @@ section,main { width: 100%; overflow: hidden;}
 #new_bg_text { width: 60%; background: rgba(255,255,255,0.1); } 
 #new_bg_text a { display: block; width: 100%; height: 100%; box-sizing: border-box; padding: 20px; display: flex; gap: 20px; align-items: center; color: #eee; font-size: 2rem; } 
 #new_bg_text a div p:first-child { color: #e60613; font-size: 0.9rem; margin-bottom: 10px; } 
-#new_bg_text a i { font-size: 2.4rem; } 
+#new_bg_text a i { font-size: 2.4rem; transition: all .3s;} 
+#new_bg_text a:hover i {color: #e60613;}
 
 #vid { width: 100%; height: 100%; position: relative; } 
 #vid video { display: block; width: 100%; height: 100%; object-fit: cover; } 
@@ -103,7 +105,6 @@ section,main { width: 100%; overflow: hidden;}
 #others h4 { display: flex; flex-direction: column; align-items: flex-start; font-size: 2.4rem; word-break: keep-all;} 
 #others h4 span { color: #e60613; font-size: 0.7rem; margin-bottom: 10px; padding-bottom: 10px; border-bottom: 1px solid #e60613; letter-spacing:3px; } 
 
-
 #others_right{height: 400px; position: relative; margin-bottom: 80px;}
 #others_right p{position: absolute; bottom: 0;}
 #others_right img{width: 150%;}
@@ -134,6 +135,7 @@ section,main { width: 100%; overflow: hidden;}
 #photos li img{width: 100%;}
 
 /*mode*/
+#mode{position: relative;}
 #mode h4{writing-mode: vertical-lr; text-orientation: upright; color:#e60613; font-size: 0.9rem; border-left: 5px solid #e60613; padding-left: 10px; position: absolute; left: 0; height: max-content; z-index: 10;}
 
 #mode_top{position: relative;}
@@ -224,7 +226,7 @@ section,main { width: 100%; overflow: hidden;}
 #detail p a i{color:#e60613;}
 
 /*question*/
-#question{margin-top: 120px;}
+#question{margin: 120px 0 60px;}
 
 #question h4 { display: flex; flex-direction: column; align-items: center; font-size: 2.4rem; word-break: keep-all; font-weight: 700; margin-bottom: 40px;} 
 #question h4 span { color: #e60613; font-size: 0.7rem; margin-bottom: 10px; padding-bottom: 10px; border-bottom: 1px solid #e60613; letter-spacing:3px; font-weight: 300;} 
