--- a/nintendo_switch/css/oled_style.css
+++ b/nintendo_switch/css/oled_style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100; 300; 400; 500; 700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700&display=swap');
 html,body { width: 100%; height: 100%; font-family: 'Noto Sans KR', Arial, sans-serif; color:#222; } 
 section,main { width: 100%; overflow: hidden;} 
 .wrap { width: 100%; padding: 0 20px; box-sizing: border-box; } 
@@ -59,8 +59,8 @@ section,main { width: 100%; overflow: hidden;}
 #big_screen h4 #slim {letter-spacing: normal; color: #efefef; font-size: 1.1rem; border: none; padding: 0; font-weight: 300; } 
 
 #big_screen #screen { width: 100%; height:100%; margin-top:120px; position: relative; margin-bottom: 60px; } 
-#big_screen video { display: block; width: 64%; z-index: 2; position: absolute; top: calc(100vw * (34 / 1030)); left:50%; transform: translateX(-50%); } 
-#big_screen #screen img { width: 100%; } 
+#big_screen video { display: block; width: 64%; z-index: 2; position: absolute; top: calc(100vw * (34 / 1030)); left:50%; transform: translateX(-50%); transition: all 1s;} 
+#big_screen #screen img { width: 100%; transition: all .5s;} 
 
 #big_screen>p { font-weight: 300; margin-bottom: 1rem; color:#eee; font-size: 0.9rem; text-align: center; word-break: keep-all; } 
 
@@ -237,13 +237,14 @@ section,main { width: 100%; overflow: hidden;}
 .ques i{color: #e60613; width: 10%; font-size: 1.4rem; text-align: right;}
 .ques p:last-child{width: 100%; display: flex; align-items: center; justify-content: space-between; gap: 10px; line-height: 1.2rem; word-break: keep-all;}
 
-.ques:hover ~.answer{display: flex;}
 .answer{display:none; overflow: hidden; width: 100%; padding: 20px; padding-bottom: 0; box-sizing:border-box; gap:15px;}
 .answer p:last-child{color: #333; font-weight: 300; font-size: 0.9rem; line-height: 1.2rem; word-break: keep-all;}
 .answer span{font-size: 0.8rem; display: block; color: #e60613;}
 .answer a{text-decoration: underline;}
 .answer a i{color: #e60613;}
 .answer a:hover{color: #e60613;}
+
+.answer.on{display: flex;}
 
 /* go_top banner*/
 #go_top { width: 100%; height: 50px; background:url("../../img/logo_nintendo_red.gif") no-repeat center #e60613; position: relative; } 
